[project]
name = "radarproto"
description = "Communicate with the MRT RADAR Protobuf API"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = ["wheel", "protobuf"]
maintainers = [{ name = "Nathan Knotts", email = "nathan@magothyrt.com" }]
readme = "README.md"

[tool.setuptools.dynamic]
version = { attr = "radarproto.__version__" }
